<resources>
    <string name="app_name">Health Care</string>
    <string name="name">Name</string>
    <string name="home_task_button">View Full Appointments List</string>
    <string name="home_new_button">Add New Appointments</string>
    <string name="home_info">Health Appointments</string>
    <string name="home">Home</string>
    <string name="all_tasks">My Appointments</string>
    <string name="add_task">New Appointment</string>
    <string name="title">Title</string>
    <string name="details">Details</string>
    <string name="category">Category</string>
    <string name="priority">Priority?</string>
    <string name="prior_ex">e.g. work, home, school.</string>
    <string name="save">Save</string>
    <string name="add_new">New task added to full list.</string>
    <string name="list_prior">Priority</string>
    <string name="list_title">Tasks</string>
    <string name="update_task">Update Appointments information</string>
    <string name="update_task_message">Appointments has been updated</string>
    <string name="delete_task_message">Appointments has been deleted</string>
    <string name="deleteButton">Delete</string>
    <string name="updateButton">Update</string>
    <string name="button_name">Submit</string>
    <string name="completed">Completed?</string>
    <string name="priority_tasks">View Priority Appointments</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="street">Street</string>
    <string name="country">City/State/Zip</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
